--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/kcasas/zendeskslack#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "botkit": "^0.6.7",
     "express": "^4.16.2"
   }
