--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "botkit": "^0.6.7",
+    "ejs": "^2.5.7",
     "express": "^4.16.2"
   }
 }
